# log2pubsub

./: README.md  config.yaml  logger.py  pull.ipynb  pyproject.toml  test.ipynb  test.sh
log2pubsub/: __init__.py  logger.py
