[tool.poetry]
name = "log2pubsub"
version = "0.1.0"
description = ""
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litellm = {extras = ["proxy"], version = "^1.48.5"}
google-cloud-aiplatform = "^1.68.0"
google-cloud-pubsub = "^2.23.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
